06-Service_mesh_com_istio/03-Gerenciamento de trafego/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr 
spec:
  host: nginx-service
  subsets:
    - name: v1 
      labels:
        version: A
    - name: v2 
      labels:
        version: B
