06-Service_mesh_com_istio/03-Gerenciamento de trafego/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs 
spec:
  hosts: 
  - nginx-service
  http:
    - fault:
        # delay:
        #   fixedDelay: 10s
        #   percentage:
        #     value: 100
        abort:
          httpStatus: 500
          percentage:
            value: 100
      route: 
      - destination: 
          host: nginx-service 
          subset: all 

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr 
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpheaderName: "x-user"
  subsets:
    - name: all 
      labels:
        app: nginx
