06-Service_mesh_com_istio/03-Gerenciamento de trafego/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs 
spec:
  hosts: 
  - nginx-service
  http:
    - route: 
      - destination: 
          host: nginx-service 
          subset: v1 
        weight: 90
      - destination: 
          host: nginx-service 
          subset: v2 
        weight: 10
